--- a/catalogo.html
+++ b/catalogo.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Curso Git e Github Expert</title>
   </head>
   <body>
-    <h1>Página inicial</h1>
-    <p>Sejam bem-vindos ao nosso website</p>
-
-    <a href="catalogo.html">Ir para a página de catálogo</a>
+    <h1>Página Católogo</h1>
+    <p>Seja bem-vindo ao nosso Catálogo</p>
   </body>
 </html>
