--- a/catalogo.html
+++ b/catalogo.html
@@ -9,5 +9,19 @@
   <body>
     <h1>Página Católogo</h1>
     <p>Seja bem-vindo ao nosso Catálogo</p>
+
+    <p>
+      Aqui apresentamos nosso portifólio de produtos para atender aos desejos de
+      nossos clientes.
+    </p>
+
+    <h3>Escolha o grupo de produtos de seu desejo:</h3>
+    <ul>
+      <li><a href="celulares.html">Celulares</a></li>
+      <li><a href="eletronicos.html">Eletrônicos</a></li>
+      <li><a href="artes.html">Artes</a></li>
+      <li><a href="bemestar.html">Bem estar</a></li>
+      <li><a href="conveniencia.html">Conveniência</a></li>
+    </ul>
   </body>
 </html>
