--- a/sobre.html
+++ b/sobre.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Curso Git e Github Expert</title>
   </head>
   <body>
-    <h1>Página inicial</h1>
-    <p>Sejam bem-vindos ao nosso website</p>
-
-    <a href="catalogo.html">Ir para a página de catálogo</a>
-    <a href="sobre.html">Sobre nós</a>
+    <h1>Sobre nós</h1>
+    <p>Conheça melhor a nossa empresa</p>
   </body>
 </html>
